--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "survey-core": "^1.9.101",
     "survey-react-ui": "^1.9.101",
     "typescript": "^4.9.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
