profile info fetch from db

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@supabase/supabase-js": "^2.31.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
+    "prettier": "^3.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -21,7 +23,6 @@
     "survey-core": "^1.9.101",
     "survey-react-ui": "^1.9.101",
     "typescript": "^4.9.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
